<resources>
    <string name="app_name">Daily Planner</string>
    <string name="H1">Календарь</string> <!-- Заголовок календаря -->
    <string name="time">Время</string>
    <string name="task_name">Название задачи</string>
    <string name="time_task">%1$d : %2$d</string>
    <string name="task">Митинг</string>
    <string name="add_task">Добавить задачу</string>
    <string name="midnicht_oclock">00:00</string>
    <string name="one_oclock">01:00</string>
    <string name="two_oclock">02:00</string>
    <string name="three_oclock">03:00</string>
    <string name="four_oclock">04:00</string>
    <string name="five_oclock">05:00</string>
    <string name="six_oclock">06:00</string>
    <string name="seven_oclock">07:00</string>
    <string name="eigth_oclock">08:00</string>
    <string name="nine_oclock">09:00</string>
    <string name="back">Назад</string>
    <string name="description">Описание задачи</string>
    <string name="cleaning_earth">Привести в порядок планету</string>
</resources>